# netboom

./: .gitignore  LICENSE  README.md
FW/inu_storage_lib/prj/cmake/: CMakeLists.txt  build.sh
FW/inu_usb_lib/: CMakeLists.txt
FW/inu_usb_lib/driver/libusb/: build.sh
FW/inu_usb_lib/driver/usb_win_install_kit/: readme.txt
FW/inu_usb_lib/include/: inu_usb.h
FW/inu_usb_lib/prj/android/jni/: Android.mk  (+3 more)
FW/inu_usb_lib/prj/cmake/: CMakeLists.txt  build.sh
FW/inu_usb_lib/prj/windows/: inu_usb.sln  inu_usb_lib.vcxproj  inu_usb_lib_android.vcxproj  inu_usb_test.vcxproj  inu_usb_wait.vcxproj  resource.h
FW/inu_usb_lib/scripts/: register_udev.sh
FW/inu_usb_lib/src/: inu_boot.c  inu_bootdetect.c  inu_monitor.c  inu_os_lyr.c  inu_os_lyr.h  inu_usb_libusb.c  inu_usb_libusb_linux.c  inu_usb_libusb_windows.c  inu_usb_libusbk.c
FW/inu_usb_lib/src/include/: bootdetect_nu3000a0.h  bootdetect_nu3000b0.h  bootdetect_nu4000a0.h  bootdetect_nu4000b0.h  bootdetect_nu4000c0.h  bootdetect_nu4000c1.h  inu_boot.h  inu_bootdetect.h
FW/inu_usb_lib/test/: inu_flash.c  inu_usb_test.c  inu_usb_wait.c
inucommon/: CMakeLists.txt  CMakeSettings.json  Jenkinsfile  build.bat  build.sh  deploy.sh  updateVersion.sh
inucommon/cmake/: android-ndk23b-api27.cmake  boost.cmake  compile_link_general.cmake  conan_settings.cmake  global_settings.cmake  linux_gcc-5.4_armv8.cmake  linux_gcc-5.4_x86_64.cmake  linux_gcc-7.3_armv8.cmake  linux_gcc-7.4_x86_64.cmake  opencv.cmake
inucommon/conan/android_ndk23b_android-27-arm64-v8a/: conanfile.py
inucommon/conan/java/: conanfile.py
inucommon/conan/linux_gcc-5.4_armv8/: conanfile.py
inucommon/conan/linux_gcc-5.4_x86_64/: conanfile.py
inucommon/conan/linux_gcc-7.3_armv8/: conanfile.py
inucommon/conan/linux_gcc-7.4_x86_64/: conanfile.py
inucommon/conan/x64/: conanfile.py
inucommon/configuration/: build.sh  deploy.sh  promote_version.sh  update_inucommon_version.pl
inucommon/doc/: Common.eap
inucommon/include/: AlgWebcamIntegrationDLL.h  AlgoAvx.h  AlgoBase.h  AlgoD2D.h  AlgoDepthOpticalData.h  BaseLogger.h  CalibrationData.h  CalibrationData2Yaml.h  CalibrationDataImp.h  CalibrationTablesUtilities.h  CsvFile.h  FeaturesTrackingCiif.h  FeaturesTrackingDataCommon.h  FpException.h  HexHelper.h  IniFile.h  InuDevice.h  InuModel.h  LocalSocketConnection.h  Locks.h  Logger.h  LutsDataSet.h  OSUtilities.h  OSUtilitiesGCC.h  OSUtilitiesVS.h  ProcessWrapper.h  RecordingMetaData.h  RegistersSet.h  ResolutionDataSet.h  RgbShufflers.h  SSE2NEON.h  SlamData.h  StaticTemporalFilterBaseDLL.h  Storage.h  TCPConnection.h  TemperatureDataSet.h  TextFileLogger.h  TiffFile.h  Version.h  WebcamIntegration.h  (+2 more)
inucommon/include/BoostFix/: condition_algorithm_8a_fix.hpp  condition_fix.hpp  interprocess_condition_fix.hpp  message_queue_fix.hpp  os_file_functions_fix.hpp  shared_dir_helpers.hpp  wait_fix.hpp  win32_api.hpp  windows_intermodule_singleton_fix.hpp
inucommon/include/PluginFramework/: ObjectAdapter.h
inucommon/lib/x64/Debug/: InuAlgWebcamIntegration.exp  InuAlgWebcamIntegration.lib  InuCommonAlgo.exp  InuCommonUtilitiesd.exp  InuCommonUtilitiesd.lib  InuSensorsDBd.exp  InuSensorsDBd.lib
inucommon/lib/x64/Release/: InuAlgWebcamIntegration.exp  InuAlgWebcamIntegration.lib  InuCommonAlgo.exp  InuCommonAlgo.lib  InuCommonUtilities.exp  InuCommonUtilities.lib  InuPluginFramework.lib  InuSensorsDB.exp  InuSensorsDB.lib
inucommon/src/AlgWebcamIntegration/: AlgWebcamIntegration.rc  AlgWebcamIntegration.vcxproj  AlgWebcamIntegration.vcxproj.filters  AlgWebcamIntegrationDLL.cpp  AuxFunctions.h  CMakeLists.txt  CMakeSettings.json  Doxyfile  WebCamIntegrationImp.cpp  WebCamInterClass.cpp  WebCamInterClass.h  basic_functions.h  resource.h
inucommon/src/Conanfiles/android_ndk23b_android-27-arm64-v8a/: conanfile.txt
inucommon/src/Conanfiles/linux_gcc-5.4_armv8/: conanfile.txt
inucommon/src/Conanfiles/linux_gcc-5.4_x86_64/: conanfile.txt
inucommon/src/Conanfiles/linux_gcc-7.3_armv8/: conanfile.txt
inucommon/src/Conanfiles/linux_gcc-7.4_x86_64/: conanfile.txt
inucommon/src/Conanfiles/x64/: conanfile.txt
inucommon/src/InuCommonAlgo/: CMakeLists.txt  CommonAlgo.rc  dllmain.cpp  resource.h
inucommon/src/InuCommonAlgo/AlgStaticTemporalFilter/: .cproject  .project  AlgStaticTemporalFilter.sln  AlgStaticTemporalFilter.vcxproj  AlgStaticTemporalFilter.vcxproj.filters  InuAlgStaticTemporalFilter.vcxproj  InuAlgStaticTemporalFilter.vcxproj.filters  StaticTemporalFilter.cpp  StaticTemporalFilter.h  StaticTemporalFilterBase.cpp  config.h  dllmain.cpp
inucommon/src/InuCommonAlgo/AlgoBase/: AlgoAvx.cpp  AlgoBase.cpp  AlgoD2D.cpp  AlgoDepth2XYZ.cpp  YUV2RGB.cpp  YUV422ToRGB.cpp  disparity_ctrl_config_file.txt
inucommon/src/InuCommonCSharpWrapper/: AssemblyInfo.cpp  CMakeLists.txt  CommonUtilitiesCSharpWrapper.rc  InuModelDBWrapper.cpp  InuModelDBWrapper.h  InuModelWrapper.cpp  InuModelWrapper.h  RecordingMetaDataWrapper.cpp  RecordingMetaDataWrapper.h  UnitTest.cpp  resource.h
inucommon/src/InuCommonUtilities/: CMakeLists.txt  CommonUtilities.rc  HexHelper.cpp  InuCommonUtilities.vcxproj  LocalSocketConnection.cpp  RecordingMetaData.cpp  TCPConnection.cpp  dllmain.cpp
inucommon/src/InuCommonUtilities/Calibration/: CalibrationData2Yaml.cpp  CalibrationDataImp.cpp  CalibrationTablesUtilities.cpp  TemperatureMetaData.cpp
inucommon/src/InuCommonUtilsJNI/: CMakeLists.txt  CallBackDispatcher.h  InuModelDBJNI.cpp  InuModelDBJNI.h  InuModelJNI.cpp  InuModelJNI.h  Logger.h  WrapperStructsJNI.h  dllmain.cpp
inucommon/src/InuCommonUtilsJava/: .classpath  .gitignore  CommonUtilsJava.jardesc  build.gradle  build.xml  gradle.properties
inucommon/src/InuPluginFramework/: CMakeLists.txt  DynamicLibrary.cpp  DynamicLibrary.h  PluginManager.cpp  ReadMe.txt  export.def  stdafx.cpp  stdafx.h
inucommon/src/InuSensorsDB/: CMakeLists.txt  CalibrationDataAll.cpp  InuDevice.cpp  InuModel.cpp  InuModelDB.cpp  InuModelDB.csv  InuSensorsDB.rc  LutsDataSet.cpp  MissingCalibrationsAlg.cpp  MissingCalibrationsAlg.h  RegistersSet.cpp  ResolutionDataSet.cpp  TemperatureDataSet.cpp
(+1643 files in other folders)
